Minor style improvements add class more visible on smaller windows new background navigation is now fixed and has a scroll bar for overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+/* Background pattern from Toptal Subtle Patterns */
+
 * {
     margin: 0;
     box-sizing: border-box;
     font-family: "Segoe UI";
     text-align: center;
+}
+
+body {
+    background-image: url("memphis-colorful.png");
 }
 
 h1, h2, h3, h4 {
@@ -19,10 +25,11 @@ h1, h2, h3, h4 {
 .addClass {
     background-color: rgb(30, 30, 30);
     color: #ffffff;
-    border: none;
+    border-color: #ffffff;
+    border-style: solid;
     width: 20%;
     height: 5%;
-    margin: 0;
+    margin: 2%;
     padding: 0;
     font-weight: bold;
 }
@@ -80,6 +87,9 @@ ul {
         font-family: "Segoe UI";
         text-align: left;
     }
+    body {
+        background-image: url("memphis-colorful.png");
+    }
     h1, h2, h3, h4 {
         font-variant: small-caps;
     }
@@ -90,9 +100,9 @@ ul {
         background-color: rgb(30, 30, 30);
         color: #ffffff;
         padding: 0;
-        padding-left: 0;
-        padding-right: 0;
         margin: 0;
+        overflow-y: auto;
+        position: fixed;
     }
     .addClass {
         background-color: rgb(30, 30, 30);
@@ -101,6 +111,7 @@ ul {
         font-family: "Segoe UI";
         width: 100%;
         height: 10%;
+        margin: 0;
         padding: 10%;
         font-weight: bold;
     }
@@ -108,8 +119,7 @@ ul {
         border-color: rgb(30, 30, 30);
         color: rgb(30, 30, 30);
         background-color: #ffffff;
-        padding-left: 3%;
-        padding-right: 3%;
+        padding: .3% 2%;
     }
     button:hover {
         background-color: rgb(30, 30, 30);
@@ -117,21 +127,24 @@ ul {
     }
     input[type="number"] {
         width: 20%;
+        padding: .3% 2%;
     }
     input[type="text"] {
         width: 30%;
+        padding: .3% 2%;
     }
     ul {
         margin: 0;
         padding: 0;
     }
+
     .navigation>ul>li {
         height: 10%;
         width: 100%;
         display: block;
         padding: 10%;
     }
-    .navigation>ul>li:hover, .addClass:hover {
+    .navigation>ul>li:hover, .addClass:hover, .active {
         background-color: #ffffff;
         color: rgb(30, 30, 30);
     }
@@ -140,17 +153,14 @@ ul {
         width: 50%;
         float: left;
         padding: 2%;
+        margin-left: 10%;
     }
     .instructions {
         width: 34%;
         float: right;
-        padding-left: 3%;
-        padding-right: 3%;
-        padding-top: 2%;
-        padding-bottom: 2%;
+        padding: 2% 3%;
         margin: 3%;
         background-color: rgb(30, 30, 30);
-        ;
         color: #ffffff;
     }
 }
